--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -398,54 +398,35 @@ Spatial abstractions are calculated by transformations of the quantitative geome
 
 
 \section{Spatial Reasoning in DSpace}
-The spatial reasoning module in DSpace is built in a constraint logic programming framework. 
+In DSpace qualitative spatial reasoning serves has a link between the high level conceptual design space and the low level quantitative geometric space. It uses formal qualitative spatial calculi for topological (RCC \cite{Freksa}), orientational (Single Cross \cite{Freksa}, Oriented Point Relation Algebra \cite{Moratz}) and distance reasoning over the spatial entities of the strucutural and artefactual design. 
 
-Constraint Handling Rules
+Within the CLP framework of DSpace, the reasoning capabilities are built as a series of spatial constraint solvers using  Constraint Logic Programming over Reals (CLP(R)) and Constrain Handling Rules (CHR). The spatial contraint solvers are designed to work directly over the multiple perspective representation structure via the spatial abstraction layer. The main service of the reasoner is qualification of sptail design configurations into topological, orientational, and distance networks, which can be used in the concetual design layer.
 
-Qualification
+TODO: figure for reasoner
 
 \subsection{Topology}
 The DSpace reasoner can qualify the following four topological relationships for convex hulls: partially overlapping, ntpp (inside), ntppi (outside), and disconnected. The process of topological qualification uses the geometric properties of convex hulls to detect topological relationships. 
 
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=40mm]{ntpp}
-\caption{A Inside B}
-\label{inside}
+\begin{figure}[t]
+ \centering
+ \subfloat[inside]{\label{inside}\includegraphics[width=27mm]{ntpp}}
+ \hspace{4 mm}
+ \subfloat[outside]{\label{outside}\includegraphics[width=27mm]{ntppi}}
+  \hspace{4 mm}
+ \subfloat[overlapping]{\label{overlapping}\includegraphics[width=34mm]{overlapping}}
+ \hspace{2 mm}
+ \subfloat[disconnected]{\label{disconnected}\includegraphics[width=43mm]{disconnected}}
+ \caption{Topological Relationships}
+\label{topoloy}
 \end{figure}
 
 An object \emph{A} has an ntpp relationship with an object \emph{B} if all \emph{A}'s points are inside the convex hull of \emph{B}. The ntpp relationship is qualified in DSpace by using the property of convex hull / point containment. A point is inside a convex hull if the polarity of the determinate between the point and each line segment in the convex hull is negative. Because the points in a convex hull are always ordered counterclockwise, in the DSpace representation, the polarity of the determinant between a point inside the convex hull will always be negative. 
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=40mm]{ntppi}
-\caption{A Outside B}
-\label{outside}
-\end{figure}
-
 An object \emph{B} has an ntppi relationship with an object \emph{B} if all \emph{B}'s points are inside the convex hull of \emph{A}. Because the ntppi relationship is the inverse of ntpp it is easy to check for in DSpace be using the ntpp relationship. 
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=50mm]{overlapping}
-\caption{Paritally Overlapping}
-\label{overlapping}
-\end{figure}
 
 An object \emph{A} has a partially overlapping relationship with an object \emph{B} if one or more line segments in \emph{A} intersect with one or more line segments in \emph{B}. The partially overlapping relationship is qualified in DSpace by checking for line intersection between line segments. Two objects are partially intersecting if they intersect at at least one point.  
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=60mm]{disconnected}
-\caption{Disconnected}
-\label{disconnected}
-\end{figure}
-
 An object \emph{A} has a disconnected relationship with an object \emph{B} if \emph{A} does not intersect with \emph{B}, there are no points in \emph{A} that are inside \emph{B}, and there are no points in \emph{B} that are inside \emph{A}. The disconnected relationship is qualified by checking for line segment intersection and point / convex hull containment. If there are no line segment intersections and no point / convex hull containment then two objects are disconnected.  
-
-TODO: figure for qualification of disconnected
-
 
 \subsection{Orientation}
 The DSpace reasoner can qualify two types of orientational relationships, intrinsic and extrinsic. Intrinsic orientational reasoning is based on the Oriented Point Relation Algebra. OPRA partitions space into half planes, which are defined by lines emanating outwards from the reference point, and defines the qualitative orientational relationships by the half plane in which a second point is located. The granularity of an OPRA relationships is defined by the number of lines emanating from the point. 
